# CodeZKP

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  STARK.cpp  cmake_install.cmake  field_poly_tests  field_poly_tests[1]_include.cmake  field_poly_tests[1]_tests.cmake  interpreter.py  mycode
Testing/Temporary/: CTestCostData.txt
src/: FRI.hpp  Field.hpp  MPolynomial.hpp  Polynomial.hpp  Stark.hpp  utils.h  utils.hpp  witness.hpp
src/py_impl/: Field.py  LC3.py  MPolynomial.py  Polynomial.py  algebra.py  fri.py  multivariate.py  stark.py  univariate.py
src/ttmath/: ttmathint.h
test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  correct_impl.py  cpp_record.txt  field_test_large_prime_runner  field_test_large_prime_runner[1]_include.cmake  field_test_large_prime_runner[1]_tests.cmake  fieldtest.cpp  fieldtest_large_prime.cpp  myTest.cpp  polynomials_test.cpp  test  test.cpp  testFRI  testFRI.cpp  testMerkle  testMerkle.cpp  testSTARK  testSTARK.cpp  testWitness.cpp
test/Testing/Temporary/: LastTest.log.tmp
